--- a/module-services/claimant-services/client/Dockerfile
+++ b/module-services/claimant-services/client/Dockerfile
@@ -1,24 +1,10 @@
-FROM node:18-alpine as build
-
-WORKDIR /app
-
-# Copy package files
-COPY package*.json ./
-
-# Install dependencies
-RUN npm install
-
-# Copy source code
-COPY . .
-
-# Build the app
-RUN npm run build
-
-# Production stage
 FROM nginx:alpine
 
-# Copy built files from build stage
-COPY --from=build /app/build /usr/share/nginx/html
+WORKDIR /usr/share/nginx/html
+
+# Copy the static files directly instead of building
+COPY public/ .
+COPY index.html .
 
 # Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
