--- a/module-services/claimant-services/client/Dockerfile
+++ b/module-services/claimant-services/client/Dockerfile
@@ -2,9 +2,11 @@ FROM nginx:alpine
 
 WORKDIR /usr/share/nginx/html
 
-# Copy the static files directly instead of building
-COPY public/ .
+# Copy index.html directly
 COPY index.html .
+
+# Create a basic favicon
+RUN echo '<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><circle cx="8" cy="8" r="8" fill="#3498db"/></svg>' > favicon.ico
 
 # Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
