--- a/module-services/claimant-services/claimant/Dockerfile
+++ b/module-services/claimant-services/claimant/Dockerfile
@@ -3,7 +3,7 @@ FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
 
 # Copy index.html directly
-COPY index.html .
+COPY *.html .
 
 # Create a basic favicon
 RUN echo '<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><circle cx="8" cy="8" r="8" fill="#3498db"/></svg>' > favicon.ico
