--- a/module-services/camel-gateway/src/main/resources/application.properties
+++ b/module-services/camel-gateway/src/main/resources/application.properties
@@ -9,6 +9,7 @@ camel.springboot.jmx-enabled=true
 # Management and health check configuration
 management.endpoints.web.exposure.include=health,info,camelroutes
 management.endpoint.health.show-details=always
+spring.jackson.serialization.write-dates-as-timestamps=false
 
 # Logging configuration
 logging.level.org.apache.camel=INFO
