claimant-service-demo

--- a/module-services/claimant-services/Dockerfile
+++ b/module-services/claimant-services/Dockerfile
@@ -1,13 +1,31 @@
 FROM node:18-alpine
 
-WORKDIR /app
+# Create app directory
+WORKDIR /usr/src/app
 
+# Copy package files
 COPY package*.json ./
 
-RUN npm install
+# Install dependencies
+RUN npm ci --only=production
 
+# Copy app source
 COPY . .
 
-EXPOSE 4000
+# Create non-root user
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S nodeuser -u 1001
 
-CMD ["npm", "start"]
+# Change ownership of the app directory to the nodejs user
+RUN chown -R nodeuser:nodejs /usr/src/app
+USER nodeuser
+
+# Expose port
+EXPOSE 3000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD curl -f http://localhost:3000/health || exit 1
+
+# Start the application
+CMD ["node", "server.js"]
