--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ services:
   camel-gateway:
     build: ./module-services/camel-gateway
     ports:
-      - "8080:8080"  # Main Camel routes
-      - "8081:8081"  # Health dashboard
+      - "8080:8080"
+      - "8081:8081"
     environment:
       - CAMEL_HEALTH_CHECK_INTERVAL=30000
       - CAMEL_LOG_LEVEL=INFO
@@ -11,7 +11,33 @@ services:
       - ./module-services/camel-gateway/routes:/opt/camel/routes
     networks:
       - camel-network
+    depends_on:
+      - claimant-services
+
+  claimant-services:
+    build: ./module-services/claimant-services
+    ports:
+      - "3000:3000"  # Claimant Services UI and GraphQL
+    environment:
+      - MONGODB_URI=mongodb://mongodb:27017/claimant_services
+      - NODE_ENV=development
+    networks:
+      - camel-network
+    depends_on:
+      - mongodb
+
+  mongodb:
+    image: mongo:7
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+    networks:
+      - camel-network
 
 networks:
   camel-network:
     driver: bridge
+
+volumes:
+  mongodb_data:
