--- a/module-services/claimant-services/package.json
+++ b/module-services/claimant-services/package.json
@@ -1,27 +1,31 @@
 {
   "name": "claimant-services",
   "version": "1.0.0",
-  "description": "Claimant Services for Unemployment Insurance System",
+  "description": "UI Modernization Demo - Claimant Services (Node.js + GraphQL)",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "apollo-server-express": "^3.12.0",
     "express": "^4.18.2",
-    "graphql": "^16.6.0",
-    "mongoose": "^7.0.3",
+    "graphql": "^16.8.1",
+    "express-graphql": "^0.12.0",
+    "mongoose": "^7.5.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "axios": "^1.3.4",
-    "uuid": "^9.0.0",
-    "morgan": "^1.10.0",
-    "winston": "^3.8.2"
+    "dotenv": "^16.3.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "jest": "^29.5.0",
-    "nodemon": "^2.0.22"
-  }
+    "nodemon": "^3.0.1"
+  },
+  "keywords": [
+    "unemployment-insurance",
+    "graphql",
+    "mongodb",
+    "ui-modernization"
+  ],
+  "author": "UI Modernization Team",
+  "license": "MIT"
 }
