--- a/module-services/claimant-services/Dockerfile
+++ b/module-services/claimant-services/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm install --omit=dev
+RUN npm install
 
 # Copy app source
 COPY . .
