--- a/module-services/camel-gateway/src/main/resources/application.properties
+++ b/module-services/camel-gateway/src/main/resources/application.properties
@@ -18,3 +18,16 @@ logging.level.root=INFO
 
 # Custom properties
 camel.health.check.interval=30000
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:cameldb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# Enable component scanning for JPA repositories
+spring.data.jpa.repositories.enabled=true
