--- a/module-services/camel-gateway/pom.xml
+++ b/module-services/camel-gateway/pom.xml
@@ -115,7 +115,13 @@
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-spring-ws-starter</artifactId>
-        </dependency>
+         </dependency>
+
+         <!-- REST implementation component -->
+         <dependency>
+             <groupId>org.apache.camel.springboot</groupId>
+             <artifactId>camel-servlet-starter</artifactId>
+         </dependency>
 
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
