--- a/module-services/camel-gateway/src/main/resources/application.properties
+++ b/module-services/camel-gateway/src/main/resources/application.properties
@@ -6,6 +6,9 @@ server.port=8080
 camel.springboot.main-run-controller=true
 camel.springboot.jmx-enabled=true
 
+# REST component configuration
+camel.component.servlet.mapping.context-path=/api/*
+
 # Management and health check configuration
 management.endpoints.web.exposure.include=health,info,camelroutes
 management.endpoint.health.show-details=always
