--- a/module-services/camel-gateway/pom.xml
+++ b/module-services/camel-gateway/pom.xml
@@ -115,17 +115,17 @@
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-spring-ws-starter</artifactId>
-         </dependency>
-
-         <!-- REST implementation component -->
-         <dependency>
-             <groupId>org.apache.camel.springboot</groupId>
-             <artifactId>camel-servlet-starter</artifactId>
-         </dependency>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-grpc-starter</artifactId>
+        </dependency>
+
+        <!-- Add servlet component for REST implementation -->
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-servlet-starter</artifactId>
         </dependency>
     </dependencies>
 
