--- a/module-services/claimant-services/package.json
+++ b/module-services/claimant-services/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "express": "^4.18.2",
     "graphql": "^15.8.0",
     "express-graphql": "^0.12.0",
