--- a/module-services/claimant-services/package.json
+++ b/module-services/claimant-services/package.json
@@ -9,6 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "dependencies": {
+    "graphql-tag": "^2.12.6",
+    "graphql": "^15.8.0",
     "axios": "^1.6.2",
     "express": "^4.18.2",
     "graphql": "^15.8.0",
