--- a/module-services/claimant-services/.env
+++ b/module-services/claimant-services/.env
@@ -18,3 +18,8 @@ CORS_ORIGIN=*
 # Service information
 SERVICE_NAME=claimant-services
 SERVICE_VERSION=1.0.0
+
+# Camel API Gateway configuration
+CAMEL_GRAPHQL_URL=http://localhost:8080/api/claimant/graphql
+CAMEL_TIMEOUT=5000
+CAMEL_RETRY_COUNT=3
