--- a/module-services/claimant-services/.env
+++ b/module-services/claimant-services/.env
@@ -20,6 +20,6 @@ SERVICE_NAME=claimant-services
 SERVICE_VERSION=1.0.0
 
 # Camel API Gateway configuration
-CAMEL_GRAPHQL_URL=http://localhost:8080/api/claimant/graphql
+CAMEL_GRAPHQL_URL=http://camel-gateway:8080/api/claimant/graphql
 CAMEL_TIMEOUT=5000
 CAMEL_RETRY_COUNT=3
