auto-register-updates

--- a/module-services/camel-gateway/src/main/resources/application.properties
+++ b/module-services/camel-gateway/src/main/resources/application.properties
@@ -7,7 +7,7 @@ camel.springboot.main-run-controller=true
 camel.springboot.jmx-enabled=true
 
 # REST component configuration
-camel.component.servlet.mapping.context-path=/api/*
+camel.component.servlet.mapping.context-path=/*
 
 # Management and health check configuration
 management.endpoints.web.exposure.include=health,info,camelroutes
