--- a/module-services/camel-gateway/pom.xml
+++ b/module-services/camel-gateway/pom.xml
@@ -117,6 +117,23 @@
             <artifactId>camel-spring-ws-starter</artifactId>
         </dependency>
 
+	<dependency>
+	    <groupId>org.apache.camel.springboot</groupId>
+	    <artifactId>camel-jms-starter</artifactId>
+	</dependency>
+
+	<dependency>
+	    <groupId>org.apache.activemq</groupId>
+	    <artifactId>artemis-jakarta-server</artifactId>
+	    <version>2.31.2</version>
+	</dependency>
+
+	<dependency>
+	    <groupId>org.apache.activemq</groupId>
+	    <artifactId>artemis-jakarta-jms-client</artifactId>
+	    <version>2.31.2</version>
+	</dependency>
+
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-grpc-starter</artifactId>
