--- a/module-services/camel-gateway/pom.xml
+++ b/module-services/camel-gateway/pom.xml
@@ -117,6 +117,7 @@
             <artifactId>camel-spring-ws-starter</artifactId>
         </dependency>
 
+	<!-- ActiveMQ Artemis for event bus -->
 	<dependency>
 	    <groupId>org.apache.camel.springboot</groupId>
 	    <artifactId>camel-jms-starter</artifactId>
@@ -124,20 +125,21 @@
 
 	<dependency>
 	    <groupId>org.apache.activemq</groupId>
-	    <artifactId>artemis-jakarta-server</artifactId>
-	    <version>2.31.2</version>
+	    <artifactId>artemis-server</artifactId>
+	    <version>2.28.0</version>
 	</dependency>
 
 	<dependency>
 	    <groupId>org.apache.activemq</groupId>
-	    <artifactId>artemis-jakarta-jms-client</artifactId>
-	    <version>2.31.2</version>
+	    <artifactId>artemis-jms-client</artifactId>
+	    <version>2.28.0</version>
 	</dependency>
 
-        <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-grpc-starter</artifactId>
-        </dependency>
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-artemis</artifactId>
+	    <version>${spring.boot.version}</version>
+	</dependency>
 
         <!-- Add servlet component for REST implementation -->
         <dependency>
