--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       - Artemis__TopicName=claim.events
     depends_on:
       - mysql
+      - camel-gateway
     networks:
       - ui-modernization
 
