--- a/module-services/camel-gateway/src/main/resources/application.properties
+++ b/module-services/camel-gateway/src/main/resources/application.properties
@@ -35,10 +35,13 @@ spring.jpa.hibernate.ddl-auto=update
 # Enable component scanning for JPA repositories
 spring.data.jpa.repositories.enabled=true
 
-# ActiveMQ Artemis Configuration
+# ActiveMQ Artemis Configuration - Enhanced for External Access
 spring.artemis.mode=embedded
 spring.artemis.embedded.enabled=true
 spring.artemis.embedded.persistent=false
+spring.artemis.broker-url=tcp://0.0.0.0:61616
+spring.artemis.user=admin
+spring.artemis.password=admin
 
 # JMS Configuration
 spring.jms.template.default-destination=claim.events
