--- a/module-services/EmployerServices/EmployerServices.csproj
+++ b/module-services/EmployerServices/EmployerServices.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.0" />
     <PackageReference Include="Apache.NMS" Version="2.1.0" />
-    <PackageReference Include="Apache.NMS.AMQP" Version="2.2.0" />
+    <PackageReference Include="Apache.NMS.ActiveMQ" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
