--- a/module-services/camel-gateway/pom.xml
+++ b/module-services/camel-gateway/pom.xml
@@ -123,6 +123,26 @@
             <artifactId>camel-servlet-starter</artifactId>
         </dependency>
         
+		<!-- Spring Web Services -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.ws</groupId>
+			<artifactId>spring-ws-core</artifactId>
+		</dependency>
+    
+    <!-- JAXB for XML binding -->
+		<dependency>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+		</dependency>
+			
     </dependencies>
 
     <build>
